# llm_test

./: llm_chat_completion.ipynb  pyproject.toml
